--- a/product-added.html
+++ b/product-added.html
@@ -2135,8 +2135,9 @@
 										</div>
 										<div class="gallery-main">
 											<div class="product__statuses">
-												<span class="product__status product__status--red">Акция</span>
-												<span class="product__status product__status--blue">Новинка</span>
+												<span class="product__status product__status--orange">Акция</span>
+												<span class="product__status product__status--indigo">Новинка</span>
+												<span class="product__status product__status--pink">Рекомендуем</span>
 												<span class="product__status">Хит</span>
 											</div>
 											<div class="swiper-wrapper">
