--- a/category.html
+++ b/category.html
@@ -3092,6 +3092,272 @@
 									</div>
 								</article>
 							</div>
+							<div class="catalog__wrapper">
+								<article class="catalog__item catalog-card catalog-card--border">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-01.png" alt="Image">
+										<div class="catalog-card__statuses">
+											<span class="catalog-card__status catalog-card__status--orange">Акция</span>
+											<span class="catalog-card__status catalog-card__status--indigo">Новинка</span>
+											<span class="catalog-card__status catalog-card__status--pink">Рекомендуем</span>
+											<span class="catalog-card__status">Хит</span>
+										</div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price catalog-card__price--red"><span>8.09</span> руб.</span>
+												<span class="catalog-card__price catalog-card__price--old"><span>11.20</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<div class="c-quantity catalog-card__quantity">
+													<div class="c-quantity__inner">
+														<button class="c-quantity__btn c-quantity__btn--minus">-</button>
+														<input type="number" class="c-quantity__value" value="1">
+														<button class="c-quantity__btn c-quantity__btn--plus">+</button>
+													</div>
+												</div>
+												<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
+													<svg>
+														<use xlink:href="img/sprite.svg#icon-basket"></use>
+													</svg>
+													<span>В корзине</span>
+												</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card is--disabled">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-02.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices"></div>
+											<a href="#" class="catalog-card__description">АДИЦЕФ (пор. д/приг. 60мл суспензии д/приема внутрь 250мг/мл фл. №1)</a>
+											<span class="catalog-card__note is--active">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn btn--light similar-products-btn">Есть аналоги</a>
+											</div>
+											<span class="catalog-card__availability">Нет в наличии</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card catalog-card--border">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-03.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>3.66</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note is--active">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card is--disabled">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-06.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices"></div>
+											<a href="#" class="catalog-card__description">ГЕНТАМИЦИНА СУЛЬФАТ (раствор для внутривенного и внутримышечного введения 40 мг/мл амп. 2 мл №10) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note is--active">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls"></div>
+											<span class="catalog-card__availability">Нет в наличии</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-05.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>8.09</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+								<article class="catalog__item catalog-card">
+									<a href="#" class="catalog-card__img">
+										<img src="img/catalog-04.png" alt="Image">
+										<div class="catalog-card__statuses"></div>
+									</a>
+									<div class="catalog-card__body">
+										<div class="catalog-card__group">
+											<div class="catalog-card__prices">
+												<span class="catalog-card__price"><span>4.02</span> руб.</span>
+											</div>
+											<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+											<span class="catalog-card__note">Продается по рецепту</span>
+										</div>
+										<div class="catalog-card__group">
+											<div class="catalog-card__controls">
+												<a href="#" class="catalog-card__btn btn">В корзину</a>
+											</div>
+											<span class="catalog-card__help">Производство: Беларусь</span>
+										</div>
+									</div>
+								</article>
+							</div>
 							<a href="#" class="catalog__wrapper-media">
 								<img src="img/catalog-banner-02.jpg" alt="Image">
 							</a>
