--- a/basket.html
+++ b/basket.html
@@ -2093,6 +2093,12 @@
 					</div>
 					<div class="basket__wrap">
 						<div class="basket__left">
+							<a href="#" class="basket__media is--desktop">
+								<img src="img/catalog-banner-01.jpg" alt="Image">
+							</a>
+							<a href="#" class="basket__media is--mobile">
+								<img src="img/catalog-banner-01.jpg" alt="Image">
+							</a>
 							<div class="basket__wrapper">
 								<div class="basket__item">
 									<button class="basket__delete" aria-label="Удалить">
@@ -2249,6 +2255,16 @@
 										<div class="totalinfo__inner">
 											<span class="totalinfo__help">Скидка:</span>
 											<div class="totalinfo__sum">8.3 руб.</div>
+										</div>
+									</div>
+									<div class="totalinfo__block">
+										<div class="c-promocode totalinfo__promocode is--error">
+											<div class="c-promocode__inner">
+												<input type="text" class="c-promocode__input" placeholder="Промокод">
+												<button class="c-promocode__btn">Применить</button>
+											</div>
+											<span class="c-promocode__result">Купон принят</span>
+											<span class="c-promocode__result c-promocode__result--error">Купон недействителен</span>
 										</div>
 									</div>
 									<div class="totalinfo__block">
