--- a/delivery.html
+++ b/delivery.html
@@ -499,8 +499,20 @@
 				<div class="mobile-menu__scroll">
 					<div class="mobile-menu__wrapper">
 						<div class="mobile-menu__block">
-							<a href="#" class="mobile-menu__btn mobile-menu__btn--orange btn">Товары на акции</a>
-							<a href="#" class="mobile-menu__btn mobile-menu__btn--green mobile-menu__btn--catalog btn">Каталог товаров</a>
+							<div class="mobile-menu__btns">
+								<a href="#" class="mobile-menu__btn mobile-menu__btn--green mobile-menu__btn--catalog btn">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-catalog-square"></use>
+									</svg>
+									<span>Каталог товаров</span>
+								</a>
+								<a href="#" class="mobile-menu__btn mobile-menu__btn--orange btn">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-discount-stroke"></use>
+									</svg>
+									<span>Товары на акции</span>
+								</a>
+							</div>
 						</div>
 						<div class="mobile-menu__block">
 							<ul class="mobile-menu__list">
@@ -538,31 +550,32 @@
 								</li>
 							</ul>
 						</div>
-						<div class="mobile-menu__block">
-							<div class="c-mobile-location mobile-menu__location">
-								<div class="c-mobile-location__wrapper">
-									<div class="c-mobile-location__city">
-										<svg>
-											<use xlink:href="img/sprite.svg#icon-location"></use>
-										</svg>
-										<span>Минск</span>
-									</div>
-									<a href="#" class="c-mobile-location__link city-selection-btn">Изменить город</a>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="mobile-menu__block">
+                        <div class="c-mobile-location mobile-menu__location">
+                            <div class="c-mobile-location__wrapper">
+                                <div class="c-mobile-location__city">
+                                    <svg>
+                                        <use xlink:href="img/sprite.svg#icon-location"></use>
+                                    </svg>
+                                    <span>Минск</span>
+                                </div>
+                                <a href="#" class="c-mobile-location__link city-selection-btn">Изменить город</a>
+                            </div>
+                        </div>
+                    </div> -->
 					</div>
 					<div class="mobile-menu__bottom">
-						<div class="c-new-number mobile-menu__number">
-							<a href="tel:6838787" class="c-new-number__link">
-								<svg>
-									<use xlink:href="img/sprite.svg#icon-phone"></use>
-								</svg>
-								<b>683-87-87</b>
-								<span>(MTC, A1, Life)</span>
-							</a>
-							<p class="c-new-number__help">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
-						</div>
+						<!-- <div class="c-new-number mobile-menu__number">
+                        <a href="tel:6838787" class="c-new-number__link">
+                            <svg>
+                                <use xlink:href="img/sprite.svg#icon-phone"></use>
+                            </svg>
+                            <b>683-87-87</b>
+                            <span>(MTC, A1, Life)</span>
+                        </a>
+                        <p class="c-new-number__help">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
+                    </div> -->
+						<p class="mobile-menu__copyright">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
 					</div>
 				</div>
 			</div>
