--- a/product.html
+++ b/product.html
@@ -32,7 +32,7 @@
 					<div class="c-location header__location">
 						<a href="#" class="c-location__trigger city-selection-btn">
 							<svg>
-								<use xlink:href="img/sprite.svg#icon-location"></use>
+								<use xlink:href="img/sprite.svg#icon-location-filled"></use>
 							</svg>
 							<span>Витебск</span>
 						</a>
@@ -94,7 +94,7 @@
 								<span class="hamburger__inner"></span>
 								<span class="hamburger__inner"></span>
 							</button>
-							<a href="index.html" class="header__logotype header__logotype--vseleki">
+							<a href="index.html" class="header__logotype header__logotype--apte4ka">
 								<img src="img/logotype.svg" width="238" height="40" alt="vse-leki.by">
 							</a>
 							<div class="c-catalog header__catalog">
@@ -2021,10 +2021,18 @@
 									</div>
 								</div>
 							</div>
+							<a href="#" class="c-basket header__user">
+								<div class="c-basket__group">
+									<svg class="c-basket__icon">
+										<use xlink:href="img/sprite.svg#icon-user"></use>
+									</svg>
+									<span class="c-basket__title">Кабинет</span>
+								</div>
+							</a>
 							<a href="#" class="c-basket header__basket">
 								<div class="c-basket__group">
 									<svg class="c-basket__icon">
-										<use xlink:href="img/sprite.svg#icon-basket"></use>
+										<use xlink:href="img/sprite.svg#icon-basket-stroke-new"></use>
 									</svg>
 									<span class="c-basket__title">Корзина</span>
 								</div>
@@ -2168,75 +2176,145 @@
 									<span class="product__text">* Изображение товара на сайте может отличаться от реального.</span>
 								</div>
 								<div class="product__main">
-									<div class="characteristics product__characteristics">
-										<div class="characteristics__wrapper">
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Тип</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">Тонометр</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Манжета</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">14,5 – 19 см</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Расположение тонометра</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">Плечо</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Питание</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">От батареек</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Функции</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">Измерение пульса, режим нескольких измерений, индикатор аритмии</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Страна производства</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">Германия</span>
-												</span>
-											</div>
-											<div class="characteristics__item">
-												<div class="characteristics__left">
-													<span class="characteristics__subtitle">Производитель</span>
-												</div>
-												<div class="characteristics__delimiter"></div>
-												<span class="characteristics__right">
-													<span class="characteristics__value">
-														<a href="#">Beurer</a>
+									<div class="product__characteristics">
+										<div class="characteristics product__characteristics-inner">
+											<div class="characteristics__wrapper">
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Тип</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">Тонометр</span>
 													</span>
-												</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Манжета</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">14,5 – 19 см</span>
+													</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Расположение тонометра</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">Плечо</span>
+													</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Питание</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">От батареек</span>
+													</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Функции</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">Измерение пульса, режим нескольких измерений, индикатор аритмии</span>
+													</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Страна производства</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">Германия</span>
+													</span>
+												</div>
+												<div class="characteristics__item">
+													<div class="characteristics__left">
+														<span class="characteristics__subtitle">Производитель</span>
+													</div>
+													<div class="characteristics__delimiter"></div>
+													<span class="characteristics__right">
+														<span class="characteristics__value">
+															<a href="#">Beurer</a>
+														</span>
+													</span>
+												</div>
+											</div>
+											<a href="#characteristics" class="characteristics__link">Показать все характеристики</a>
+										</div>
+										<div class="best-offer product__best-offer">
+											<div class="best-offer__wrap">
+												<div class="best-offer__top">
+													<div class="best-offer__body">
+														<span class="best-offer__title">Вместе выгоднее</span>
+														<span class="best-offer__help">Купите набор со скидкой.</span>
+													</div>
+													<a href="#" class="best-offer__btn btn btn--light">Все в корзину</a>
+												</div>
+												<div class="best-offer__slider">
+													<div class="swiper">
+														<div class="swiper-wrapper">
+															<div class="swiper-slide">
+																<a href="#" class="best-offer-card best-offer__slide">
+																	<picture class="best-offer-card__img">
+																		<img src="img/catalog-01.png" alt="Image">
+																	</picture>
+																	<div class="best-offer-card__body">
+																		<div class="best-offer-card__prices">
+																			<span class="best-offer-card__price best-offer-card__price--new-price"><span>28.09</span> руб.</span>
+																			<span class="best-offer-card__price best-offer-card__price--old-price"><span>31.01</span> руб.</span>
+																		</div>
+																		<span class="best-offer-card__title">Beurer BC 28 автоматический тонометр на запястье</span>
+																	</div>
+																</a>
+															</div>
+															<div class="swiper-slide">
+																<a href="#" class="best-offer-card best-offer__slide">
+																	<picture class="best-offer-card__img">
+																		<img src="img/catalog-02.png" alt="Image">
+																	</picture>
+																	<div class="best-offer-card__body">
+																		<div class="best-offer-card__prices">
+																			<span class="best-offer-card__price"><span>8.09</span> руб.</span>
+																		</div>
+																		<span class="best-offer-card__title">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп.</span>
+																	</div>
+																</a>
+															</div>
+															<div class="swiper-slide">
+																<a href="#" class="best-offer-card best-offer__slide">
+																	<picture class="best-offer-card__img">
+																		<img src="img/catalog-03.png" alt="Image">
+																	</picture>
+																	<div class="best-offer-card__body">
+																		<div class="best-offer-card__prices">
+																			<span class="best-offer-card__price best-offer-card__price--new-price"><span>16.22</span> руб.</span>
+																			<span class="best-offer-card__price best-offer-card__price--old-price"><span>18.88</span> руб.</span>
+																		</div>
+																		<span class="best-offer-card__title">ФУРАСОЛ (порошок для приг. р-ра д/наружного применения 100 мг пак. №5)</span>
+																	</div>
+																</a>
+															</div>
+														</div>
+													</div>
+													<button class="swiper-button-prev" aria-label="Назад">
+														<svg class="swiper-button-icon">
+															<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+														</svg>
+													</button>
+													<button class="swiper-button-next" aria-label="Далее">
+														<svg class="swiper-button-icon">
+															<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
+														</svg>
+													</button>
+												</div>
 											</div>
 										</div>
-										<a href="#characteristics" class="characteristics__link">Показать все характеристики</a>
 									</div>
 									<div class="product__additional">
 										<div class="product__filter">
@@ -2661,7 +2739,12 @@
 																			<button class="c-quantity__btn c-quantity__btn--plus">+</button>
 																		</div>
 																	</div>
-																	<a href="#" class="catalog-card__btn btn btn--sm-desktop btn--red">В корзине</a>
+																	<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
+																		<svg>
+																			<use xlink:href="img/sprite.svg#icon-basket"></use>
+																		</svg>
+																		<span>В корзине</span>
+																	</a>
 																</div>
 																<span class="catalog-card__help">Беларусь</span>
 															</div>
@@ -2766,7 +2849,12 @@
 																			<button class="c-quantity__btn c-quantity__btn--plus">+</button>
 																		</div>
 																	</div>
-																	<a href="#" class="catalog-card__btn btn btn--sm-desktop btn--red">В корзине</a>
+																	<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
+																		<svg>
+																			<use xlink:href="img/sprite.svg#icon-basket"></use>
+																		</svg>
+																		<span>В корзине</span>
+																	</a>
 																</div>
 																<span class="catalog-card__help">Беларусь</span>
 															</div>
@@ -2844,6 +2932,16 @@
 												</div>
 											</div>
 										</div>
+										<button class="swiper-button-prev" aria-label="Назад">
+											<svg class="swiper-button-icon">
+												<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+											</svg>
+										</button>
+										<button class="swiper-button-next" aria-label="Далее">
+											<svg class="swiper-button-icon">
+												<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
+											</svg>
+										</button>
 									</div>
 								</div>
 							</div>
@@ -3109,8 +3207,20 @@
 				<div class="mobile-menu__scroll">
 					<div class="mobile-menu__wrapper">
 						<div class="mobile-menu__block">
-							<a href="#" class="mobile-menu__btn mobile-menu__btn--orange btn">Товары на акции</a>
-							<a href="#" class="mobile-menu__btn mobile-menu__btn--green mobile-menu__btn--catalog btn">Каталог товаров</a>
+							<div class="mobile-menu__btns">
+								<a href="#" class="mobile-menu__btn mobile-menu__btn--green mobile-menu__btn--catalog btn">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-catalog-square"></use>
+									</svg>
+									<span>Каталог товаров</span>
+								</a>
+								<a href="#" class="mobile-menu__btn mobile-menu__btn--orange btn">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-discount-stroke"></use>
+									</svg>
+									<span>Товары на акции</span>
+								</a>
+							</div>
 						</div>
 						<div class="mobile-menu__block">
 							<ul class="mobile-menu__list">
@@ -3148,31 +3258,32 @@
 								</li>
 							</ul>
 						</div>
-						<div class="mobile-menu__block">
-							<div class="c-mobile-location mobile-menu__location">
-								<div class="c-mobile-location__wrapper">
-									<div class="c-mobile-location__city">
-										<svg>
-											<use xlink:href="img/sprite.svg#icon-location"></use>
-										</svg>
-										<span>Минск</span>
-									</div>
-									<a href="#" class="c-mobile-location__link city-selection-btn">Изменить город</a>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="mobile-menu__block">
+                        <div class="c-mobile-location mobile-menu__location">
+                            <div class="c-mobile-location__wrapper">
+                                <div class="c-mobile-location__city">
+                                    <svg>
+                                        <use xlink:href="img/sprite.svg#icon-location"></use>
+                                    </svg>
+                                    <span>Минск</span>
+                                </div>
+                                <a href="#" class="c-mobile-location__link city-selection-btn">Изменить город</a>
+                            </div>
+                        </div>
+                    </div> -->
 					</div>
 					<div class="mobile-menu__bottom">
-						<div class="c-new-number mobile-menu__number">
-							<a href="tel:6838787" class="c-new-number__link">
-								<svg>
-									<use xlink:href="img/sprite.svg#icon-phone"></use>
-								</svg>
-								<b>683-87-87</b>
-								<span>(MTC, A1, Life)</span>
-							</a>
-							<p class="c-new-number__help">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
-						</div>
+						<!-- <div class="c-new-number mobile-menu__number">
+                        <a href="tel:6838787" class="c-new-number__link">
+                            <svg>
+                                <use xlink:href="img/sprite.svg#icon-phone"></use>
+                            </svg>
+                            <b>683-87-87</b>
+                            <span>(MTC, A1, Life)</span>
+                        </a>
+                        <p class="c-new-number__help">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
+                    </div> -->
+						<p class="mobile-menu__copyright">Аптека №25 пятой категории ООО "Аптека групп Центр</p>
 					</div>
 				</div>
 			</div>
