--- a/index.html
+++ b/index.html
@@ -2035,6 +2035,14 @@
 									</div>
 								</div>
 							</div>
+							<button class="header-search-trigger header__search-trigger">
+								<span class="header-search-trigger__input">Начать поиск</span>
+								<span class="header-search-trigger__btn" aria-label="Поиск">
+									<svg>
+										<use xlink:href="img/sprite.svg#icon-search"></use>
+									</svg>
+								</span>
+							</button>
 							<a href="#" class="c-basket header__user">
 								<div class="c-basket__group">
 									<svg class="c-basket__icon">
