--- a/product.html
+++ b/product.html
@@ -2262,7 +2262,7 @@
 														<span class="best-offer__title">Вместе выгоднее</span>
 														<span class="best-offer__help">Купите набор со скидкой.</span>
 													</div>
-													<a href="#" class="best-offer__btn btn btn--light">Все в корзину</a>
+													<a href="#" class="best-offer__btn btn">Все в корзину</a>
 												</div>
 												<div class="best-offer__slider">
 													<div class="swiper">
@@ -2702,18 +2702,6 @@
 								<div class="similar-products-content__slider">
 									<div class="similar-products-content__top">
 										<h3 class="similar-products-content__title">Аналоги</h3>
-										<div class="swiper-controls similar-products-content__slider-controls">
-											<button class="swiper-button-prev" aria-label="Назад">
-												<svg class="swiper-button-icon">
-													<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
-												</svg>
-											</button>
-											<button class="swiper-button-next" aria-label="Далее">
-												<svg class="swiper-button-icon">
-													<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
-												</svg>
-											</button>
-										</div>
 									</div>
 									<div class="similar-products-content__slider-wrapper">
 										<div class="swiper">
